--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "password-cracking-hashcat",
+  "name": "splunk-tutorial",
   "private": true,
   "version": "0.0.0",
   "type": "module",
